Fixing CPP build to properly output object files and copy them to the bin dir.

--- a/src/Microsoft.DotNet.Wpf/src/PresentationCore/CPP/PresentationCoreCpp.vcxproj
+++ b/src/Microsoft.DotNet.Wpf/src/PresentationCore/CPP/PresentationCoreCpp.vcxproj
@@ -23,24 +23,29 @@
 
   <PropertyGroup>
     <CLRSupport>pure</CLRSupport>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <!-- Target .Net Core 3.0 -->
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFrameworkIdentifier>.NETCoreApp</TargetFrameworkIdentifier>
+  </PropertyGroup>
+  
+  <!-- 
+    We need this to be above our C++/CLI configuration options as the C++ props files will 
+    set TargetExt (and other props) based on ConfigurationType and we want to override that.
+  -->
+  <Import Project="$(WpfCppProps)" />
+  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+
+  <PropertyGroup>
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <!-- Don't Link, we only need the OBJ file as an Additional module for C# -->
     <LinkCompiled>false</LinkCompiled>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <TargetExt>.obj</TargetExt>
-    <!-- CPP targets disable copying since its typically done by link, but we're disabling link -->
-    <SkipCopyBuildProduct>false</SkipCopyBuildProduct>
-  </PropertyGroup>
-
-  <PropertyGroup>
-      <!-- Target .Net Core 3.0 -->
-    <TargetFramework>netcoreapp3.0</TargetFramework>
-    <TargetFrameworkIdentifier>.NETCoreApp</TargetFrameworkIdentifier>
   </PropertyGroup>
   
-  <Import Project="$(WpfCppProps)" />
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
-
   <PropertyGroup Label="Globals">
     <ProjectGuid>{50A5318F-3B9A-48B9-9615-D5FA9D6D9C3E}</ProjectGuid>
     <UseClrCrt>true</UseClrCrt>
@@ -106,4 +111,9 @@
   
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
 
+  <PropertyGroup>
+    <!-- CPP targets disable copying since its typically done by link, but we're disabling link -->
+    <SkipCopyBuildProduct>false</SkipCopyBuildProduct>
+  </PropertyGroup>
+  
 </Project>
