Force PCore netmodule to always build as AnyCPU to avoid LNK1302.

--- a/src/Microsoft.DotNet.Wpf/src/PresentationCore/CSharp/PresentationCoreCSharp.csproj
+++ b/src/Microsoft.DotNet.Wpf/src/PresentationCore/CSharp/PresentationCoreCSharp.csproj
@@ -13,6 +13,7 @@
     <GenerateResourcesSRNamespace>MS.Internal.PresentationCore</GenerateResourcesSRNamespace>
     <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
     <Platforms>AnyCPU;x64</Platforms>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   
   <PropertyGroup>
