--- a/src/Microsoft.DotNet.Wpf/src/PresentationCore/CSharp/PresentationCoreCSharp.csproj
+++ b/src/Microsoft.DotNet.Wpf/src/PresentationCore/CSharp/PresentationCoreCSharp.csproj
@@ -13,6 +13,7 @@
     <GenerateResourcesSRNamespace>MS.Internal.PresentationCore</GenerateResourcesSRNamespace>
     <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
     <Platforms>AnyCPU;x64</Platforms>
+    <!-- Must always build this as AnyCPU to avoid LNK1302 in the merge project one level above. -->
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   
