Fixing issues with conflicting assembly attributes by turning off assembly info generation for interstital PCore assemblies.

--- a/src/Microsoft.DotNet.Wpf/src/PresentationCore/CPP/PresentationCoreCpp.vcxproj
+++ b/src/Microsoft.DotNet.Wpf/src/PresentationCore/CPP/PresentationCoreCpp.vcxproj
@@ -23,6 +23,8 @@
 
   <PropertyGroup>
     <CLRSupport>pure</CLRSupport>
+    <!-- We don't need assembly info here as the output from this project will just be merged into PresentationCore. -->
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <PropertyGroup>
