--- a/src/Microsoft.DotNet.Wpf/src/PresentationCore/PresentationCore.vcxproj
+++ b/src/Microsoft.DotNet.Wpf/src/PresentationCore/PresentationCore.vcxproj
@@ -23,6 +23,8 @@
 
   <PropertyGroup>
     <CLRSupport>pure</CLRSupport>
+    <!-- TODO: remove when we figure out ApiCompat targets here -->
+    <RunRefApiCompat>false</RunRefApiCompat>
   </PropertyGroup>
 
   <PropertyGroup>
