--- a/src/Microsoft.DotNet.Wpf/src/WindowsBase/WindowsBase.csproj
+++ b/src/Microsoft.DotNet.Wpf/src/WindowsBase/WindowsBase.csproj
@@ -439,7 +439,27 @@
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
   </ItemGroup>
+
+  <!-- 
+    Need Microsoft.WinFx.targets to embed *.compositefont 
+    files using MainResourcesGeneration target
+  -->
+  <PropertyGroup>
+    <InternalMarkupCompilation>true</InternalMarkupCompilation>
+  </PropertyGroup>
   
+  <ItemGroup>
+    <!-- 
+         Note: These resources are used by PresentationCore for font fallbacks. 
+         They must be included here as we cannot use PBT based resources in the PresentationCore.vcxproj merge project. 
+         Adding them to WindowsBase removes the need for a separate resource assembly to feed PresentationCore. 
+    -->
+    <Resource Include="Fonts\*.CompositeFont">
+      <GenerateSource>false</GenerateSource>
+      <XlfSource>false</XlfSource>
+    </Resource>
+  </ItemGroup>
+
   <!-- Including the Microsoft.TextTemplating.targets requires us to manually import Sdk.Targets because
        it needs to be imported after Sdk.targets. This causes the BuildDependsOn variable,
        which is modified by the T4 targets, to be overwritten, so the TransformAll target 
