Fixing resources in PCoreCSharp to generate correct classnames (they should not have the CSharp moniker).

--- a/src/Microsoft.DotNet.Wpf/src/PresentationCore/CSharp/PresentationCoreCSharp.csproj
+++ b/src/Microsoft.DotNet.Wpf/src/PresentationCore/CSharp/PresentationCoreCSharp.csproj
@@ -1437,7 +1437,9 @@
 
   <ItemGroup>
     <!-- Needs to be included here in order to generate SRID. -->
-    <EmbeddedResource Include="$(WpfSourceDir)PresentationCore\Resources\Strings.resx" />
+    <EmbeddedResource Include="$(WpfSourceDir)PresentationCore\Resources\Strings.resx">
+      <ManifestResourceName>FxResources.PresentationCore.SR</ManifestResourceName>
+    </EmbeddedResource>
   </ItemGroup>
   
   <!-- Including the Microsoft.TextTemplating.targets requires us to manually import Sdk.Targets because
