--- a/src/Microsoft.DotNet.Wpf/src/Themes/PresentationFramework.Luna/ref/PresentationFramework.Luna-ref.csproj
+++ b/src/Microsoft.DotNet.Wpf/src/Themes/PresentationFramework.Luna/ref/PresentationFramework.Luna-ref.csproj
@@ -24,7 +24,9 @@
     <ProjectReference Include="$(WpfSourceDir)PresentationUI\PresentationUI.csproj" />
     <ProjectReference Include="$(WpfSourceDir)System.Xaml\System.Xaml.csproj" />
     <ProjectReference Include="$(WpfSourceDir)WindowsBase\WindowsBase.csproj" />
-    <ProjectReference Include="$(WpfSourceDir)PresentationCore\PresentationCore.csproj" />
+    <ProjectReference Include="$(WpfSourceDir)PresentationCore\PresentationCore.vcxproj">
+      <UndefineProperties>TargetFramework;TargetFrameworks</UndefineProperties>
+    </ProjectReference>
     <ProjectReference Include="$(WpfSourceDir)PresentationFramework\PresentationFramework.csproj" />
   </ItemGroup>
 
