--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -5,10 +5,11 @@
     <PreReleaseVersionLabel>alpha1</PreReleaseVersionLabel>
     <AssemblyVersion>4.0.0.0</AssemblyVersion>
     <SystemIOPackagingVersion>4.6.0-preview9.19409.17</SystemIOPackagingVersion>
+    <SystemResourcesExtensionsVersion>4.6.0-preview9.19409.17</SystemResourcesExtensionsVersion>
   </PropertyGroup>
   <!-- NuGet Package Versions -->
   <PropertyGroup>
-    <MicrosoftPrivateWinformsVersion>4.8.0-preview9.19417.1</MicrosoftPrivateWinformsVersion>
+    <MicrosoftPrivateWinformsVersion>5.0.0-alpha1.19425.1</MicrosoftPrivateWinformsVersion>
   </PropertyGroup>
   <!-- Packages that come from https://github.com/dotnet/coreclr -->
   <PropertyGroup>
@@ -18,7 +19,7 @@
   </PropertyGroup>
   <!-- Packages that come from https://github.com/dotnet/core-setup -->
   <PropertyGroup>
-    <MicrosoftNETCoreAppVersion>3.0.0-preview9-19416-02</MicrosoftNETCoreAppVersion>
+    <MicrosoftNETCoreAppVersion>3.0.0-preview9-19419-06</MicrosoftNETCoreAppVersion>
     <MicrosoftNETCorePlatformsVersion>3.0.0-preview9.19409.17</MicrosoftNETCorePlatformsVersion>
     <SystemDrawingCommonVersion>4.6.0-preview9.19409.17</SystemDrawingCommonVersion>
     <SystemDirectoryServicesVersion>4.6.0-preview9.19409.17</SystemDirectoryServicesVersion>
@@ -112,6 +113,6 @@
       It is worth reiterating that this package *should not* be consumed to build the product.
   -->
   <PropertyGroup>
-    <MicrosoftDotNetWpfDncEngVersion>4.8.0-preview9.19416.7</MicrosoftDotNetWpfDncEngVersion>
+    <MicrosoftDotNetWpfDncEngVersion>5.0.0-alpha1.19425.15</MicrosoftDotNetWpfDncEngVersion>
   </PropertyGroup>
 </Project>
