Adding comment on jit optimizations

--- a/eng/WpfArcadeSdk/tools/InjectModuleInitializer.targets
+++ b/eng/WpfArcadeSdk/tools/InjectModuleInitializer.targets
@@ -404,6 +404,7 @@
       <ILFile>$([System.IO.Path]::GetFullPath('$(IntermediateOutputPath)$(AssemblyName).il'))</ILFile>
     </PropertyGroup>
 
+    <!-- Ensures the DebuggableAttribute has the appropriate optimizations enabled. -->
     <PropertyGroup>
       <DebugEnableJitOptimization>false</DebugEnableJitOptimization>
       <DebugEnableJitOptimization Condition="'$(Configuration)' == 'Release'">true</DebugEnableJitOptimization>
